--- a/_includes/data/call.html
+++ b/_includes/data/call.html
@@ -82,7 +82,7 @@ ICST proceedings.</span></p>
 <h2>Submission Site</h2>
 
 Submissions will be handled via EasyChair: <a
-href=" "><span
+href="https://easychair.org/my/conference?conf=mutation21#"><span
 style='color:#551A8B'></span></a>.
 
 <h2><a name=TOC-Special-Issue-on-Mutation-Testing></a>Special Issue on Mutation Analysis and its Industrial Applications</h2>
