--- a/_includes/data/organisers.html
+++ b/_includes/data/organisers.html
@@ -42,6 +42,24 @@
 		</div>
 	    </div>
 	    {% endfor %}
+
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h3 class="section-subheading text-muted"></h3>
+                    <h3 class="section-heading">Web Chair</h3>
+                    <h3 class="section-subheading text-muted"></h3>
+                </div>
+            </div>
+	    {% for member in site.data.webchair %}
+	    <div class="row pc">
+                <div class="col-md-6 col-sm-6 pc-name">
+                     {{ member.Name }} {{ member.Surname }}
+		</div>
+		<div class="col-md-6 col-sm-6 pc-affiliation">
+                     {{member.Institution}} ({{member.Country}})
+		</div>
+	    </div>
+	    {% endfor %}
         </div>
     <!--</aside>-->
     </section>
