--- a/_includes/data/intro.html
+++ b/_includes/data/intro.html
@@ -23,7 +23,7 @@
 
                  <p>Mutation 2021 is the 16<sup>th</sup> in the series of
                     international workshops focusing on mutation analysis. The
-                    workshop will be co-located the 
+                    workshop will be co-located with the 
                     International Conference on Software Testing, Verification,
                     and Validation (<a href="https://icst2021.icmc.usp.br/">ICST
                     2021</a>). Accepted
