--- a/_includes/data/call.html
+++ b/_includes/data/call.html
@@ -83,7 +83,7 @@ ICST proceedings.</span></p>
 
 Submissions will be handled via EasyChair: <a
 href="https://easychair.org/my/conference?conf=mutation21#"><span
-style='color:#551A8B'></span></a>.
+style='color:#551A8B'>link</span></a>.
 
 <h2><a name=TOC-Special-Issue-on-Mutation-Testing></a>Special Issue on Mutation Analysis and its Industrial Applications</h2>
 <p><span>
