--- a/_includes/data/call.html
+++ b/_includes/data/call.html
@@ -73,9 +73,8 @@ ICST proceedings.</span></p>
 
 <h2>Important Dates </h2>
   <ul type=disc>
-    <li><span>Submission of abstracts: </li>
-    <li><span>Submission of full papers: 10th January, 2021 </li>
-    <li><span>Notification of acceptance: 31st January, 2021</li>
+    <li><span>Submission of full papers: 20th January, 2021 </li>
+    <li><span>Notification of acceptance: 9th February, 2021</li>
     <li><span>Camera Ready: 20th February, 2021</li>
     <li><span>Workshop date: 12th April, 2021</li>
 </ul>
