--- a/_includes/data/organisers.html
+++ b/_includes/data/organisers.html
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3 class="section-subheading text-muted"></h3>
-                    <h3 class="section-heading">Program Committee (TBD)</h3>
+                    <h3 class="section-heading">Program Committee</h3>
                     <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
