--- a/_includes/data/program.html
+++ b/_includes/data/program.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Program (TBD)</h2>
+                    <h2 class="section-heading">Program</h2>
                     <h3 class="section-subheading text-muted"></h3>
                 </div>
 	    </div>
@@ -11,10 +11,10 @@
 	    	 <table class="program-table">
 	    {% for member in site.data.program %}
 			<tr valign="baseline">
-				<td class="program-time">{{ member.Time }}.</td>
+				<td class="program-time">{{ member.Time }}</td>
         	       	<td>
-					<p class="paper-title">{{ member.Title }}.</p><br>
-					<p class="paper-authors">{% if member.Authors %}{{ member.Authors }}.{% endif %}</p>
+					<p class="paper-title">{{ member.Title }}</p><br>
+					<p class="paper-authors">{% if member.Authors %}{{ member.Authors }}{% endif %}</p>
 				</td>
 			</tr>
 	    {% endfor %}
