intro: add workshop date

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,7 @@
                 <div class="intro-subheading">MUTATION 2021<br></div>
                 <div class="intro-subheading">The 16th International Workshop on Mutation Analysis</div>
                 <div class="intro-lead-in">Co-located with <a href="https://icst2021.icmc.usp.br/">ICST</a></div>
+                <div class="intro-subheading">April 12, 2021</div>
                 <a href="#intro" class="page-scroll btn btn-xl">Tell Me More</a><br>
             </div>
         </div>
